--- a/src/app/pages/impact-dev/impact-dev.scss
+++ b/src/app/pages/impact-dev/impact-dev.scss
@@ -1,24 +1,31 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-// Just for math book
-.mapdiv {
-    height: 80rem;
-    width: 100%;
-
-    @include width-up-to($tablet-max) {
-        top: 0;
+.map-page {
+    .statdiv {
+        background: linear-gradient(90deg, #326ba4 0%, #2e217a 100%);
+        background-color: rgba(1, 35, 102, 0.5);
+        width: 100%;
     }
 
-    @include width-up-to($phone-max) {
-        height: 50rem;
-    }
+    // Just for math book
+    .mapdiv {
+        height: 80rem;
+        width: 100%;
 
-    .mapboxgl-ctrl-bottom-left {
-        display: none;
-    }
+        @include width-up-to($tablet-max) {
+            top: 0;
+        }
 
-    .mapboxgl-ctrl-bottom-right {
-        display: none;
-    }
+        @include width-up-to($phone-max) {
+            height: 50rem;
+        }
 
+        .mapboxgl-ctrl-bottom-left {
+            display: none;
+        }
+
+        .mapboxgl-ctrl-bottom-right {
+            display: none;
+        }
+    }
 }
