--- a/src/app/pages/impact-dev/schoolmap/schoolmap.html
+++ b/src/app/pages/impact-dev/schoolmap/schoolmap.html
@@ -1,14 +1,13 @@
-<div class="content">
-    <div class="main-content">
-        <div class="txthead"> Put your school on the Map </div>
-        <div class="txtbdy">
-            Our prestigious Institutional Partner Program provides guidance for
-            increasing the use of open educational resources on your campus.
+<template args="model">
+    <div class="content">
+        <div class="main-content">
+            <div class="txthead">{model.heading}</div>
+            <div class="txtbdy">{model.description}</div>
+            <div class="txtlink">
+                <a href="{model.linkUrl}">{model.linkText}</a>
+                <span class="linkarrow"><i class="fa fa-chevron-right right-angle"></i></span>
+            </div>
         </div>
-        <div class="txtlink">
-            <span class="tlink"><a href="https://openstax.org/"> I want to learn more</a></span>
-            <span class="linkarrow"><i class="fa fa-chevron-right right-angle"></i></span>
-        </div>
+        <div><img class="map-img" src="/images/home/map2.png"></div>
     </div>
-    <div><img class="map-img" src="/images/home/map2.png"></div>
-</div>
+</template>
