--- a/src/app/pages/hero-journey/sections/books/books.html
+++ b/src/app/pages/hero-journey/sections/books/books.html
@@ -7,7 +7,7 @@
             <div class="card">
                 <h2>{model.bookHeading}</h2>
                 <div>{model.bookDescription}</div>
-                <a class="btn primary" href="{model.booksLink}">{model.booksLinkText}</a>
+                <a class="btn primary" href="{model.booksLink}" target="_blank">{model.booksLinkText}</a>
                 <div data-html="skipHtml"></div>
             </div>
         <else>
