--- a/src/app/pages/hero-journey/sections/share/share.html
+++ b/src/app/pages/hero-journey/sections/share/share.html
@@ -17,7 +17,7 @@
             <input type="hidden" name="last_name" value="{model.lastName}">
             <input type="hidden" name="email" value="{model.email}">
             <input type="hidden" name="company" value="{model.school}">
-            <textarea name="00N21000001IpUW" placeholder="Please type your message here." required></textarea>
+            <textarea name="00N21000001IpUW" placeholder="Please type your message here." required autofocus></textarea>
             <input class="btn primary" type="submit">
         </form>
     </div>
