Publish map under /global-reach

--- a/src/app/pages/separatemap/separatemap.html
+++ b/src/app/pages/separatemap/separatemap.html
@@ -3,7 +3,7 @@
             <div id="mapd"  class="mapd" skip="true"></div>
             <div id="back-impact-div" class="back-impact-div">
                 <span class="close-map-msg">Close map</span>
-                <button id="back-impact-btn" class="back-impact-btn" href="/impact-dev">
+                <button id="back-impact-btn" class="back-impact-btn" href="/global-reach">
                         <i class="fa fa-times left-arrow-bak"></i>
                 </button>
             </div>
