Size answer cards to fit longest answer

--- a/src/app/pages/hero-journey/sections/quiz/quiz.html
+++ b/src/app/pages/hero-journey/sections/quiz/quiz.html
@@ -14,7 +14,8 @@
                     <div class="answers">
                         <div each="answer in qa.answers" class="answer card">
                             <div class="card-content">
-                                {answer}
+                                <span class="longest-answer">{model.longestAnswer}</span>
+                                <span class="displayed-answer">{answer}</span>
                             </div>
                         </div>
                     </div>
