--- a/src/app/pages/hero-journey/hero-journey.scss
+++ b/src/app/pages/hero-journey/hero-journey.scss
@@ -41,4 +41,45 @@ $near-white: #fafafa;
 
         justify-self: left;
     }
+
+    .pulsing {
+        align-self: start;
+        justify-self: start;
+        position: relative;
+
+        > * {
+            grid-column-start: 1;
+            grid-row-start: 1;
+            position: relative;
+        }
+
+        .pulse {
+            animation: pulse 3s ease-out;
+            animation-iteration-count: infinite;
+            background-color: os-color(orange);
+            border-radius: 0.4rem;
+            bottom: 0;
+            left: 0;
+            position: absolute;
+            right: 0;
+            top: 0;
+        }
+    }
+
+    @keyframes pulse {
+        33% {
+            opacity: 0.1;
+            transform: scale(1);
+        }
+
+        66% {
+            opacity: 0.7;
+            transform: scale(1.1, 1.3);
+        }
+
+        100% {
+            opacity: 0;
+            transform: scale(1.2, 1.5);
+        }
+    }
 }
