--- a/src/app/pages/hero-journey/sections/try/try.html
+++ b/src/app/pages/hero-journey/sections/try/try.html
@@ -5,7 +5,10 @@
             <div class="blurb">{model.description}</div>
         </div>
         <div class="button-and-image">
-            <a class="btn primary" href="{model.linkUrl}" target="_blank">{model.linkText}</a>
+            <div class="pulsing">
+                <div class="pulse"></div>
+                <a class="btn primary" href="{model.linkUrl}" target="_blank">{model.linkText}</a>
+            </div>
             <img src="{model.image.image}" alt="{model.image.altText}">
         </div>
     </div>
