--- a/src/app/pages/hero-journey/sections/quiz/quiz.scss
+++ b/src/app/pages/hero-journey/sections/quiz/quiz.scss
@@ -128,6 +128,14 @@ $guessed-color: #c1c1c1;
             color: $guessed-color;
             pointer-events: none;
             text-decoration: line-through;
+
+            .card-content {
+                border-color: $guessed-color;
+            }
+        }
+
+        &:not(.guessed) .card-content {
+            border-image: linear-gradient(to bottom, os-color(green), os-color(light-blue)) 1 stretch;
         }
 
         .card-content {
@@ -135,7 +143,6 @@ $guessed-color: #c1c1c1;
 
             align-items: center;
             border: 0;
-            border-image: linear-gradient(to bottom, os-color(green), os-color(light-blue)) 1 stretch;
             border-left: 0.6rem solid transparent;
             display: grid;
             justify-items: center;
@@ -166,8 +173,8 @@ $guessed-color: #c1c1c1;
 
         .longest-answer,
         .displayed-answer {
-            grid-row-start: 1;
             grid-column-start: 1;
+            grid-row-start: 1;
         }
     }
 
