Put formstack form in an iframe
Remove postscribe

--- a/src/app/pages/institutional-partnership/application.html
+++ b/src/app/pages/institutional-partnership/application.html
@@ -1,4 +1,1 @@
-<div id="formstack-form" skip="true"></div>
-<script type="text/javascript">
-    postscribe('#formstack-form', '<script src=https://550groupllc.formstack.com/forms/js.php/ox_institutional_partner_program><\/script>');
-</script>
+<iframe class="form-iframe" src="https://550groupllc.formstack.com/forms/ox_institutional_partner_program"></iframe>
