Move submit button to right side
Also update release version number

--- a/src/app/pages/hero-journey/hero-journey.scss
+++ b/src/app/pages/hero-journey/hero-journey.scss
@@ -44,7 +44,7 @@ $near-white: #fafafa;
 
     .pulsing {
         align-self: start;
-        justify-self: start;
+        justify-self: end;
         position: relative;
 
         > * {
