Add established partners popup

--- a/src/app/pages/institutional-partner-program/sections/participants/participants.html
+++ b/src/app/pages/institutional-partner-program/sections/participants/participants.html
@@ -5,6 +5,6 @@
         <div class="icons">
             <img each="icon in model.icons" src="{icon.image}" alt="{icon.altText}">
         </div>
-        <a href="{model.linkTarget}">{model.linkText} <span class="fa fa-chevron-right"></span></a>
+        <a class="show-established-partners" href="{model.linkTarget}">{model.linkText} <span class="fa fa-chevron-right"></span></a>
     </div>
 </template>
