--- a/src/app/pages/institutional-partner-program/sections/sign-up/sign-up.scss
+++ b/src/app/pages/institutional-partner-program/sections/sign-up/sign-up.scss
@@ -12,6 +12,7 @@
 
         display: grid;
         grid-gap: 3rem;
+        grid-template-columns: 100%;
         justify-items: center;
         text-align: center;
     }
