--- a/src/app/pages/institutional-partner-program/sections/speaking/speaking.html
+++ b/src/app/pages/institutional-partner-program/sections/speaking/speaking.html
@@ -4,6 +4,9 @@
             <h2>{model.heading}</h2>
             <div class="description-block" data-html="description"></div>
         </div>
-        <img src="{model.image}" alt="{model.altText}">
+        <div class="img-block">
+            <img src="{model.image}" alt="{model.altText}">
+            <div class="caption" data-html="caption"></div>
+        </div>
     </div>
 </template>
