--- a/src/app/pages/institutional-partner-program/sections/big-quote/big-quote.html
+++ b/src/app/pages/institutional-partner-program/sections/big-quote/big-quote.html
@@ -1,4 +1,6 @@
 <template args="model">
+    <div class="background-image" style="background-image: url({model.backgroundImage})"></div>
+    <div class="gradient-overlay"></div>
     <div class="content">
         <div class="big-quote-mark">“</div>
         <div class="text-block">
