--- a/src/app/pages/institutional-partner-program/sections/big-quote/big-quote.scss
+++ b/src/app/pages/institutional-partner-program/sections/big-quote/big-quote.scss
@@ -1,16 +1,28 @@
 @import 'pattern-library/core/pattern-library/headers';
 
 .big-quote {
-    background: linear-gradient(rgba(text-color(normal), 0.8)), url('//via.placeholder.com/1400x500/424242');
-    background-color: text-color(normal);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     color: text-color(white);
     padding: 16rem 0;
 
     @include width-up-to($phone-max) {
         padding: 4rem 2rem;
+    }
+
+    .background-image,
+    .gradient-overlay {
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: -1;
+    }
+
+    .gradient-overlay {
+        background-color: rgba(text-color(normal), 0.8);
     }
 
     .content {
