Fix big quote section of Institutional Partnership Program page
Set position relative

--- a/src/app/pages/institutional-partner-program/sections/big-quote/big-quote.scss
+++ b/src/app/pages/institutional-partner-program/sections/big-quote/big-quote.scss
@@ -3,6 +3,7 @@
 .big-quote {
     color: text-color(white);
     padding: 16rem 0;
+    position: relative;
 
     @include width-up-to($phone-max) {
         padding: 4rem 2rem;
