Test details page and components

--- a/src/app/pages/details/let-us-know/let-us-know.html
+++ b/src/app/pages/details/let-us-know/let-us-know.html
@@ -10,4 +10,4 @@
     <a class="link" href="/adoption?{encodeURIComponent(model.title)}">
         Using this book? Let us know.
     </a>
-</div>
+</template>
