--- a/src/app/pages/details/partners-tab/partners-tab.html
+++ b/src/app/pages/details/partners-tab/partners-tab.html
@@ -5,7 +5,7 @@
         <div class="ally-logo">
             <img
             src="http://staxlogos.openstax.org/OSX-ALLY-Gray-RGB-150dpi.png"
-            alt=""
+            alt="OpenStax ally logo"
             >
         </div>
     </div>
